[metadata]
name = travelperk-python-api-types
version = 0.0.1
author = José Ignacio Amelivia Santiago
author_email = jignacio.amelivia@gmail.com
description = Python types for the travelperk API entities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/namelivia/travelperk-python-api-types
project_urls =
    Bug Tracker = https://github.com/namelivia/travelperk-python-api-types/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
